fixing double click issue on mobile

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,8 +50,10 @@
   background: black;
   opacity: 0;
 }
-.card-link:hover {
-  opacity: 0.1;
+@media (hover) {
+  .card-link:hover {
+    opacity: 0.1;
+  }
 }
 // ensures that the card hover behavior doesn't cause "double tap" problems on mobile
 
